[package]
name = "hello_world" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.72"

[dependencies]
nalgebra = "0.30.0"
libc = "0.2.112"
sparse21 = "0.2.1"
ndarray-linalg = "0.14.1"
ndarray = "0.15.4"
rand = "0.8.4"

