[package]
name = "ptn_lib" # the name of the package
version = "0.1.0"    # the current version, obeying semver

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.72"

[dependencies]
nalgebra = "0.31.4"
libc = "0.2.112"
sparse21 = "0.2.1"
ndarray-linalg = { version = "0.14.1"}
ndarray = "0.15.4"
rand = "0.8.4"
log4rs = "1.0.0"
log = "0.4.14"
chrono = "0.4.19"
indexmap = { version = "1.8.0", features = ["std"] }
num-traits = "0.2.15"
paste = "1.0.9"
num = "0.4.0"
