[package]
name = "ptn_lib" # the name of the package
version = "0.1.0"    # the current version, obeying semver

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.72"

[dependencies]
nalgebra = "0.32.1"
libc = "0.2.112"
sparse21 = "0.2.1"
rand = "0.8.4"
chrono = "0.4.19"
indexmap = { version = "1.8.0", features = ["std"] }
num-traits = "0.2.15"
paste = "1.0.9"
num = "0.4.0"
rayon = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
ndarray = "0.15.4"
intel-mkl-src = "0.8.1"